--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <button>click Me</button>
+    <script src="/app.js">
+    </script>
 
-
-    <script src="/app.js"></script>
 </body>
 </html>
